Revert "Issue #2913364 by jrockowitz: Truncate multiple lines of text with more link when displayed in the Results table"
This reverts commit edf0fa3a243e464219c20b53e314e20f58650dd0.

--- a/css/webform.admin.css
+++ b/css/webform.admin.css
@@ -50,13 +50,11 @@
  * @see /admin/structure/webform/manage/contact/results/submissions
  */
 .webform-results__table th,
-.webform-results__table td > div {
+.webform-results__table td {
   max-width: 400px;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-height: 14em;
 }
 
 /* Make sure 'Operations' is never cut-off */
